<resources>
    <string name="app_name">travel_cloud</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_device_list">设备列表</string>
    <string name="menu_client_setting">客户端设置</string>
    <string name="menu_current_device">当前访问设备</string>
    <string name="menu_other_setting">电影电视</string>
    <string name="menu_wif_setting">第三方WIFI设置</string>
    <string name="menu_ctrl_device">控制当前设备</string>
    <string name="menu_login_client">查看登录客户端</string>

    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>

    <string name="title_activity_login">登录</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">欢迎 !</string>
    <string name="invalid_username">无效的用户名</string>
    <string name="invalid_password">密码不能少于6位</string>
    <string name="login_failed">登录失败</string>

    <string name="menu_scan">扫描二维码</string>
    <string name="instructions">
        1、在堆区分配对象需要的内存分配的内存包括本类和父类的所有实例变量，但不包括任何静态变量\n
        2、对所有实例变量赋默认值将方法区内对实例变量的定义拷贝一份到堆区，然后赋默认值\n
        3、执行实例初始化代码初始化顺序是先初始化父类再初始化子类，初始化时先执行实例代码块然后是构造方法
    </string>
    <string name="select_all_true">全选</string>
    <string name="select_all_false">全不选</string>
    <string name="item">项</string>
    <!--功能菜单-->
    <string name="func_menu_download">下载</string>
    <string name="func_menu_move">移动</string>
    <string name="func_menu_delete">删除</string>
    <string name="func_menu_more">更多</string>
</resources>
