<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:title="@string/menu_device_list"
                app:actionLayout="@layout/arrow" />
        <item
                android:id="@+id/nav_setting_client"
                android:title="@string/menu_client_setting"
                app:actionLayout="@layout/arrow" />
        <item
                android:id="@+id/nav_device_access"
                android:title="@string/menu_current_device"
                app:actionLayout="@layout/arrow" />
    </group>

    <item android:title="@string/menu_other_setting"
          android:id="@+id/menu_other_title">
        <menu>
            <item
                    android:id="@+id/nav_wifi_setting"
                    android:title="@string/menu_wif_setting"
                    app:actionLayout="@layout/arrow"/>
            <item
                    android:id="@+id/nav_device_controller"
                    android:title="@string/menu_ctrl_device"
                    app:actionLayout="@layout/arrow"/>
            <item
                    android:id="@+id/nav_login_client"
                    android:title="@string/menu_login_client"
                    app:actionLayout="@layout/arrow"/>
        </menu>
    </item>
</menu>
