<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.gospell.travel.ui.home.HomeFragment"
            android:label="@string/menu_device_list"
            tools:layout="@layout/fragment_home" />

    <fragment
            android:id="@+id/nav_setting_client"
            android:name="com.gospell.travel.ui.setting.ClientSettingFragment"
            android:label="@string/menu_client_setting"
            tools:layout="@layout/fragment_setting_client" />

    <fragment
            android:id="@+id/nav_device_access"
            android:name="com.gospell.travel.ui.device.DeviceAccessFragment"
            android:label="@string/menu_current_device"
            tools:layout="@layout/fragment_device_access" />

    <fragment
            android:id="@+id/nav_wifi_setting"
            android:name="com.gospell.travel.ui.setting.WifiSettingFragment"
            android:label="@string/menu_wif_setting"
            tools:layout="@layout/fragment_setting_wifi" />

    <fragment
            android:id="@+id/nav_device_controller"
            android:name="com.gospell.travel.ui.device.DeviceControllerFragment"
            android:label="@string/menu_ctrl_device"
            tools:layout="@layout/fragment_device_controll" />
    <fragment
            android:id="@+id/nav_login_client"
            android:name="com.gospell.travel.ui.login.LoginClientFragment"
            android:label="@string/menu_login_client"
            tools:layout="@layout/fragment_login" />
</navigation>